[package]
name = "rustc-main"
version = "0.0.0"
edition = "2021"

[dependencies]
# tidy-alphabetical-start

# Make sure rustc_codegen_ssa ends up in the sysroot, because this
# crate is intended to be used by codegen backends, which may not be in-tree.
rustc_codegen_ssa = { path = "../rustc_codegen_ssa" }

rustc_driver = { path = "../rustc_driver" }
rustc_driver_impl = { path = "../rustc_driver_impl" }

# Make sure rustc_smir ends up in the sysroot, because this
# crate is intended to be used by stable MIR consumers, which are not in-tree.
rustc_smir = { path = "../rustc_smir" }

stable_mir = { path = "../stable_mir" }
# tidy-alphabetical-end

[dependencies.libmimalloc-sys]
git = "https://github.com/lqd/mimalloc_rust.git"
branch = "mimalloc-3.0.1-alpha"
optional = true
default-features = false
features = ["extended", "override"]

[features]
# tidy-alphabetical-start
jemalloc = ['dep:libmimalloc-sys']
llvm = ['rustc_driver_impl/llvm']
max_level_info = ['rustc_driver_impl/max_level_info']
rustc_randomized_layouts = ['rustc_driver_impl/rustc_randomized_layouts']
# tidy-alphabetical-end
